several updates with compile timeout